// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PackageChange annual render with defaults 1`] = `
<div class="ncf__package-change">
  <div class="ncf__package-change__package">
    <div class="ncf__package-change__content">
      <p>
        You have chosen
        <span class="ncf__strong">
          Trial
        </span>
      </p>
    </div>
    <div class="ncf__package-change__actions">
      <a href="https://www.ft.com"
         class="ncf__button ncf__button--mono ncf__button--baseline"
         data-trackable="change"
      >
        Change
      </a>
    </div>
  </div>
</div>
`;

exports[`PackageChange annual render with discount 1`] = `
<div class="ncf__package-change">
  <div class="ncf__package-change__package">
    <div class="ncf__package-change__content">
      <p>
        You have chosen
        <span class="ncf__strong">
          Trial
        </span>
      </p>
    </div>
    <div class="ncf__package-change__actions">
      <a href="https://www.ft.com"
         class="ncf__button ncf__button--mono ncf__button--baseline"
         data-trackable="change"
      >
        Change
      </a>
    </div>
  </div>
</div>
`;

exports[`PackageChange annual render with trialPrice 1`] = `
<div class="ncf__package-change">
  <div class="ncf__package-change__package">
    <div class="ncf__package-change__content">
      <p>
        You have chosen
        <span class="ncf__strong">
          Trial
        </span>
      </p>
    </div>
    <div class="ncf__package-change__actions">
      <a href="https://www.ft.com"
         class="ncf__button ncf__button--mono ncf__button--baseline"
         data-trackable="change"
      >
        Change
      </a>
    </div>
  </div>
</div>
`;

exports[`PackageChange render with defaults 1`] = `
<div class="ncf__package-change">
  <div class="ncf__package-change__package">
    <div class="ncf__package-change__content">
      <p>
        You have chosen
        <span class="ncf__strong">
          Trial
        </span>
      </p>
    </div>
    <div class="ncf__package-change__actions">
      <a href="https://www.ft.com"
         class="ncf__button ncf__button--mono ncf__button--baseline"
         data-trackable="change"
      >
        Change
      </a>
    </div>
  </div>
</div>
`;

exports[`PackageChange renders with description 1`] = `
<div class="ncf__package-change">
  <div class="ncf__package-change__package">
    <div class="ncf__package-change__content">
      <p>
        You have chosen
        <span class="ncf__strong">
          Trial
        </span>
      </p>
      <p class="ncf__package-change__content__description">
        Personalised email briefings and alerts
      </p>
    </div>
    <div class="ncf__package-change__actions">
      <a href="https://www.ft.com"
         class="ncf__button ncf__button--mono ncf__button--baseline"
         data-trackable="change"
      >
        Change
      </a>
    </div>
  </div>
</div>
`;
